--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -4,3 +4,9 @@
 
 "PhysRev":
   url: https://journals.aps.org/
+
+"electronics":
+  url: https://www.mdpi.com/journal/electronics
+
+"information":
+  url: https://www.mdpi.com/journal/information
