--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,46 +1,11 @@
-"adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
-
-"podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
-
-"rosen":
-  - firstname: ["Nathan", "N."]
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
-
-"bach":
-  - firstname: ["Johann Sebastian", "J. S."]
-    url: https://en.wikipedia.org/wiki/Johann_Sebastian_Bach
-
-  - firstname: ["Carl Philipp Emanuel", "C. P. E."]
-    url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
-
-"przibram":
-  - firstname: ["Karl"]
-    url: https://link.springer.com/article/10.1007/s00016-019-00242-z
-
-"schrodinger":
-  - firstname: ["Erwin"]
-    url: https://en.wikipedia.org/wiki/Erwin_Schr%C3%B6dinger
-
-"lorentz":
-  - firstname: ["Hendrik Antoon"]
-    url: https://en.wikipedia.org/wiki/Hendrik_Lorentz
-
-"planck":
-  - firstname: ["Max"]
-    url: https://en.wikipedia.org/wiki/Max_Planck
-
 "kitsos":
-  - firstname: ["Kitsos", "Paris Kitsos", "P., Kitsos", "Kitsos, P."]
+  - firstname: ["Paris Kitsos"]
     url: https://scholar.google.com/citations?user=ByA11KQAAAAJ
 
 "flamis":
-  - firstname: ["Flamis", "Georgios Flamis", "G., Flamis", "Flamis, G."]
+  - firstname: ["Georgios Flamis"]
     url: https://scholar.google.com/citations?user=6tKDjBMAAAAJ
 
 "plessas":
-  - firstname": ["Plessas", "F Plessas", "FC Plessas", "Fotis Plessas"]
+  - firstname": ["Fotis Plessas"]
     url: https://scholar.google.com/citations?user=kplNQX0AAAAJ
