--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,11 +1,11 @@
-"kitsos":
-  - firstname: ["Paris Kitsos"]
+"Kitsos":
+  - firstname: ["Paris"]
     url: https://scholar.google.com/citations?user=ByA11KQAAAAJ
 
-"flamis":
-  - firstname: ["Georgios Flamis"]
+"Flamis":
+  - firstname: ["Georgios"]
     url: https://scholar.google.com/citations?user=6tKDjBMAAAAJ
 
-"plessas":
-  - firstname": ["Fotis Plessas"]
+"Plessas":
+  - firstname": ["Fotis"]
     url: https://scholar.google.com/citations?user=kplNQX0AAAAJ
